// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render full-bleed row 1`] = `
<div
  className="root"
  style={
    Object {
      "backgroundColor": undefined,
      "border": undefined,
      "borderColor": undefined,
      "borderRadius": undefined,
      "borderWidth": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "minHeight": undefined,
      "paddingBottom": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "textAlign": undefined,
    }
  }
/>
`;

exports[`render row with all props configured 1`] = `
<div
  className="root test-class"
  style={
    Object {
      "backgroundAttachment": "fixed",
      "backgroundColor": "red",
      "backgroundImage": "url(desktop.jpg)",
      "backgroundPosition": "center center",
      "backgroundRepeat": "repeat",
      "backgroundSize": "contain",
      "border": "solid",
      "borderColor": "red",
      "borderRadius": "15px",
      "borderWidth": "10px",
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": "10px",
      "marginLeft": "10px",
      "marginRight": "10px",
      "marginTop": "10px",
      "minHeight": "200px",
      "paddingBottom": "10px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
      "textAlign": "right",
    }
  }
>
  <div
    className="contained"
  />
</div>
`;

exports[`render row with mobile image displayed and parallax enabled 1`] = `
<div
  className="contained"
>
  <div
    className="inner"
    style={
      Object {
        "backgroundAttachment": undefined,
        "backgroundColor": undefined,
        "backgroundImage": "url(mobile.jpg)",
        "backgroundPosition": undefined,
        "backgroundRepeat": "no-repeat",
        "backgroundSize": "cover",
        "border": undefined,
        "borderColor": undefined,
        "borderRadius": undefined,
        "borderWidth": undefined,
        "marginBottom": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "minHeight": undefined,
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
        "textAlign": undefined,
      }
    }
  />
</div>
`;

exports[`render row with no props 1`] = `
<div
  className="contained"
>
  <div
    className="inner"
    style={
      Object {
        "backgroundColor": undefined,
        "border": undefined,
        "borderColor": undefined,
        "borderRadius": undefined,
        "borderWidth": undefined,
        "marginBottom": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "minHeight": undefined,
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
        "textAlign": undefined,
      }
    }
  />
</div>
`;
